--- a/header.html
+++ b/header.html
@@ -1,51 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="nav.css">
 </head>
+
 <body>
     <nav>
-            <div class="top-nav">
-                <div class="navigations-1">
-                    <a href="#">Engage ATS</a>
-                    <span>|</span>
-                    <a href="#">Canvas</a>
-                    <span>|</span>
-                    <a href="contact-us.html">Contact Us</a>
-                    <span class="social-icons">
-                        <a href="#"><img src="nav/facebook.png" alt="fb"></a>
-                        <a href="#"><img src="nav/twitter.png" alt="tw"></a>
-                        <a href="#"><img src="nav/vimeo.png" alt="vimeo"></a>
-                        <a href="#"><img src="nav/youtube.png" alt="yt"></a>
-                    </span>
-                    <a class="btn-home" href="index.html">ATS Home Page</a>
-                    <a class="btn-discover" href="#">Discover Our Schools</a>
-                </div>
+        <div class="top-nav">
+            <div class="navigations-1">
+                <a href="#">Engage ATS</a>
+                <span>|</span>
+                <a href="#">Canvas</a>
+                <span>|</span>
+                <a href="contact-us.html">Contact Us</a>
+                <span class="social-icons">
+                    <a href="#"><img src="nav/facebook.png" alt="fb"></a>
+                    <a href="#"><img src="nav/twitter.png" alt="tw"></a>
+                    <a href="#"><img src="nav/vimeo.png" alt="vimeo"></a>
+                    <a href="#"><img src="nav/youtube.png" alt="yt"></a>
+                </span>
+                <a class="btn-home" href="index.html">ATS Home Page</a>
+                <a class="btn-discover" href="#">Discover Our Schools</a>
             </div>
+        </div>
 
-            <div class="bottom-nav">
-                <div class="navigations-2">
-                    <div class="logo">
-                        <a href="index.html">
+        <div class="bottom-nav">
+            <div class="navigations-2">
+                <div class="logo">
+                    <a href="index.html">
                         <img src="main/ATS.png" alt="ATS Logo" />
-                        </a>
-                    </div>
-                     <a class="mob-search-icon"><img src="nav/search.png" alt="search" ></a>
-                    <button class="menubtn" onclick="toggleMobileMenu()">☰</button>
-                    <ul class="nav-links" id="navMenu">
-                        <li><a href="About-ATS.html">Who We Are</a></li>
-                        <li><a href="Membership.html">Membership</a></li>
-                        <li><a href="Accreditation.html">Accreditation</a></li>
-                        <li><a href="Resources.html">Resources</a></li>
-                        <li><a href="Events.html">Events</a></li>
-                        <li class="search-icon"><img src="nav/search.png" alt="search" ></li>
-                        <a class="mob-btn-discover" href="index.html">Discover Our Schools</a>
-                    </ul>
+                    </a>
                 </div>
+                <a class="mob-search-icon"><img src="nav/search.png" alt="search"></a>
+                <button class="menubtn" onclick="toggleMobileMenu()">☰</button>
+                <ul class="nav-menu" id="navMenu">
+                    <li><a href="About-ATS.html">Who We Are</a></li>
+                    <li><a href="Membership.html">Membership</a></li>
+                    <li><a href="Accreditation.html">Accreditation</a></li>
+                    <li><a href="Resources.html">Resources</a></li>
+                    <li><a href="Events.html">Events</a></li>
+                    <li class="search-icon"><img src="nav/search.png" alt="search"></li>
+                    <a class="mob-btn-discover" href="index.html">Discover Our Schools</a>
+                </ul>
             </div>
-        </nav>
-        
+        </div>
+    </nav>
+
 </body>
 </html>
