--- a/contact-us.html
+++ b/contact-us.html
@@ -30,24 +30,24 @@
                     </div>
                     <div class="contact-info-outer">
                         <div class="contact-info">
-                        <div class="info-row">
-                            <strong>Address</strong>
-                            <div>
-                                <p>Complex</p>
-                                <p>Sarangarh</p>
-                                <p>496445</p>
+                            <div class="info-row">
+                                <strong>Address</strong>
+                                <div>
+                                    <p>Complex</p>
+                                    <p>Sarangarh</p>
+                                    <p>496445</p>
+                                </div>
                             </div>
-                        </div>
 
-                        <div class="info-row">
-                            <strong>Telephone</strong>
-                            <div>
-                                <p><a href="tel:0123456789">0123456789</a></p>
-                                <p><a href="#">Staff Directory</a></p>
+                            <div class="info-row">
+                                <strong>Telephone</strong>
+                                <div>
+                                    <p><a href="tel:0123456789">0123456789</a></p>
+                                    <p><a href="#">Staff Directory</a></p>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    </div>                    
                 </div>
                 <div class="map">
                     <iframe src="https://www.google.com/maps?q=21.5896142,83.077543&z=17&output=embed"
@@ -67,6 +67,8 @@
                         <select>
                             <option>General Inquiries</option>
                             <option>Membership</option>
+                            <option>Accreditation</option>
+                            <option>Resources</option>
                             <option>Technical Support</option>
                         </select>
                         <input type="email" placeholder="Email Address *" required />
