--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
                         </div>
                     </div>
                     <div class="news-card">
-                        <img src="main/Events (2).jpg" alt="News 2" />
+                        <img src="main/Events (3).jpg" alt="News 2" />
                         <div class="overlay">
                             <div class="news-card-des">
                                 <h3>ATS research featured in top academic journal</h3>
@@ -121,7 +121,7 @@
                         </div>
                     </div>
                     <div class="news-card">
-                        <img src="main/Events (2).jpg" alt="News 2" />
+                        <img src="main/event 4.jpg" alt="News 2" />
                         <div class="overlay">
                             <div class="news-card-des">
                                 <h3>ATS research featured in top academic journal</h3>
@@ -131,7 +131,7 @@
                         </div>
                     </div>
                     <div class="news-card">
-                        <img src="main/Events (2).jpg" alt="News 2" />
+                        <img src="main/event 5.jpg" alt="News 2" />
                         <div class="overlay">
                             <div class="news-card-des">
                                 <h3>ATS research featured in top academic journal</h3>
@@ -183,7 +183,7 @@
                             <div class="month">Oct 2025</div>
                             <div class="thru">(THRU OCT 16)</div>
                         </div>
-                        <img src="main/Events (1).jpg" class="event-image" alt="Event 2" />
+                        <img src="main/Events (2).jpg" class="event-image" alt="Event 2" />
                         <div class="event-content">
                             <h3>2025 ATS Technology in Theological Education Group Gathering</h3>
                             <p>Designed for technology professionals and educational technologists who serve ATS
